# FiveM-Tweak

./: .gitignore  LICENSE  README.md  base.tsx  fix.py  index.html  package-lock.json  package.json  restructure.py  restructure2.py
blood/: MatureData-WindowsClient.sig  MatureData-WindowsClient.ucas
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/blood/: MatureData-WindowsClient.pak  MatureData-WindowsClient.utoc
src-tauri/src/: advanced_tweaks.rs  config.rs  fps_optimizer.rs  game_launcher.rs  gpu_detect.rs  graphics_preset.rs  lib.rs  network_optimizer.rs  nvidia_profile.rs  process_director.rs  stretch.rs  system_optimizer.rs
src/components/: CustomSelect.tsx
src/i18n/: en.ts  index.ts  th.ts
src/lib/: commands.ts
